#My sketches

[workspace]
members = [
	"svg",
	"ray2d",
	"edapx-colors",
	"lines-vector",
	"polyline",
	"pattern_2",
	"patternone",
	"rayquad",
	"rayquad2",
	"rayquad3",
	"rayquad4",
	"rayquad5",
	"raycircle",
	"raycircle2",
	"raycircle3",
	"raycurves",
	"screeneffect",
	"svg-easy",
	"template-quad"
]

[profile.release]
debug = true
