#My sketches

[workspace]
resolver = "2"
members = [
	"svg",
	"ray2d",
	"edapx-colors",
	"lines-vector",
	"polyline",
	"pattern_2",
	"patternone",
	"rayquad",
	"rayquad2",
	"rayquad3",
	"rayquad4",
	"rayquad5",
	"raycircle",
	"raycircle2",
	"raycircle3",
	"raycurves",
	"raycastcurves",
	"raycastelements",
	"bezier",
	"screeneffect",
	"svg-easy",
	"template-quad",
	"hires"
]

[profile.release]
debug = true
