[package]
name = "raycastcurves"
version = "0.1.0"
authors = ["Davide Prati <lastexxit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { version ="0.18.0"  }
nannou_conrod = { version ="0.18.0" }
edapx-colors = { path = "../edapx-colors" }
ray2d = { path = "../ray2d" }
rayon = "1.5.0"

