[package]
name = "svg"
version = "0.1.0"
authors = ["Joshua Batty <info@joshuabatty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { git = "https://github.com/nannou-org/nannou", branch = "publish-nannou-0.18.1" }
usvg = "0.11"